# pixel-patrol

./: .gitignore  CONTAINER.md  Dockerfile  Dockerfile.dev  NOTICE  README.md  dev_serve.sh  mkdocs.yml  pixel-patrol.def  pyproject.toml
.devcontainer/amd-cupy/: Dockerfile  devcontainer.json
.devcontainer/dpnp-intel-gpu/: Dockerfile  devcontainer.json
.devcontainer/jax-amd/: Dockerfile  devcontainer.json
.devcontainer/jax-intel-gpu/: Dockerfile  devcontainer.json
.devcontainer/jax-nvidia/: Dockerfile  devcontainer.json
.devcontainer/numba/: Dockerfile  devcontainer.json
.devcontainer/numba-cuda/: Dockerfile  devcontainer.json
.devcontainer/numpy/: Dockerfile  devcontainer.json
.devcontainer/nvidia-rapids/: Dockerfile  devcontainer.json
.devcontainer/pyclesperanto-amd-gpu/: Dockerfile  devcontainer.json
.devcontainer/pyclesperanto-cpu/: Dockerfile  devcontainer.json
.devcontainer/pyclesperanto-intel-gpu/: Dockerfile  devcontainer.json
.devcontainer/pyclesperanto-nvdia-gpu/: Dockerfile  devcontainer.json
.github/workflows/: benchmark-performance.yml  build-launcher.yml  deploy-viewer.yml  python-tests.yml
deploy/launcher/: README.md  build.sh  launcher.py
docs/: about.html  api.md  cli.md  contributing.md  example.parquet  extensions.md  home.html  index.html  index.md  installation.md  processing.md  raster_processor2_concept.md  viewer.md  why.html
examples/: 01_quickstart.py  01_quickstart_extended.py  01_quickstart_simple.py  02_example_plankton_bioio.py  02_quickstart_extended.py  03_example_processor_widget_filtering.py  04_example_plankton_bioio.py  04_example_processor_widget_filtering.py  create_and_export_project.py  create_and_show_report_lpv.py  create_process_report.py  create_process_report_w_example_data.py  create_process_report_w_example_local_test_data.py  create_process_report_w_geff_data.py  example_pp_bioio.py  generate_traccuracy_data.py  generate_zarr_datasets.py  import_project.py  show_process_report_w_example_local_test_data.py  show_process_report_w_traccuracy_example.py
examples/geff-extension/: pyproject.toml
examples/geff-extension/examples/: create_geff_report.py  create_traccuracy_report.py
examples/geff-extension/src/traxel_patrol/: plugin_registry.py
examples/geff-extension/src/traxel_patrol/loaders/: geff_loader.py  traccuracy_loader.py
examples/geff-extension/src/traxel_patrol/widgets/: geff_dynamic_metrics_widget.py  geff_summary_widget.py  traccuracy_summary_widget.py
examples/geff-extension/test/: test_geff_loader.py
examples/geo-extension/: pyproject.toml
examples/geo-extension/src/geo_extension/: geoimageloader.py  plugin_registry.py
examples/minimal-extension/: README.md  create_and_show_report.py  make_dataset.py  pyproject.toml
examples/minimal-extension-static/: README.md  create_and_show_report.py  pyproject.toml
examples/minimal-extension-static/.github/workflows/: deploy-pages.yml
examples/minimal-extension-static/data/2024/: 02.md  03.md
examples/minimal-extension-static/data/2025/: 02.md
examples/minimal-extension-static/src/: plugin_registry.py
examples/minimal-extension-static/src/markdown_diary_tracker_static/: my_loader.py  plugin_registry.py
examples/minimal-extension-static/src/markdown_diary_tracker_static/viewer/: extension.json
examples/minimal-extension/.github/workflows/: deploy-pages.yml
examples/minimal-extension/data/2024/: 01.md
examples/minimal-extension/data/2025/: 01.md
examples/minimal-extension/data/azores_log/: patch_abyss.parquet  patch_midnight.parquet  patch_sunlit.parquet  patch_twilight.parquet
examples/minimal-extension/data/campsite_log/: patch_dawn.parquet  patch_day.parquet  patch_dusk.parquet  patch_night.parquet
examples/minimal-extension/data/kermadec_log/: patch_abyss.parquet  patch_midnight.parquet  patch_sunlit.parquet  patch_twilight.parquet
examples/minimal-extension/data/rooftop_log/: patch_dawn.parquet  patch_day.parquet  patch_dusk.parquet  patch_night.parquet
examples/minimal-extension/examples/: create_and_show_report.py
examples/minimal-extension/examples/data/2025/: 03.md
examples/minimal-extension/src/markdown_diary_tracker_static/: my_loader.py  my_processor.py
examples/minimal-extension/src/markdown_diary_tracker_static/viewer/: plugin_mood_trend.js  plugin_word_frequency.js
examples/minimal-extension/src/my_pixel_patrol_extension/: my_loader.py  my_processor.py  my_widget1.py  my_widget2.py  plugin_registry.py
examples/minimal-extension/src/pixel_patrol_hai_watch/: my_loader.py  my_processor.py  plugin_registry.py
examples/minimal-extension/src/pixel_patrol_hai_watch/viewer/: extension.json  plugin_dives_logged.js  plugin_glow_by_depth.js
examples/minimal-extension/src/pixel_sky_watch/: my_loader.py  my_processor.py  plugin_registry.py
examples/minimal-extension/src/pixel_sky_watch/viewer/: extension.json  plugin_sky_patches_logged.js  plugin_stars_by_time.js
ood/: README.md  form.yml  manifest.yml  submit.yml.erb
pixel_patrol/: __init__.py  api.py  cli.py  config.py  plugins.py
pixel_patrol_base/: plugins.py
playground/: 20250808_histogram_absolute_from_relative_test.ipynb  20250813_speed_test_dask_v_numpy.py  20251007_test_polars_df_from_rows_fails.py  20251113_rowsToPolars_orConcatChunksToPolars.py  20260224_backends.py  20260522_demo_new_processor_interface.py  20260522_test_demo_aggregation.py  20260605_generate_WHOI_example_dataset.py  20260608_example_streaming_in_memory.py  benchmark_slicing_strategies.py  bioio-tifffile-vs-bioio-ome-zarr.py  compare_backends.py
scripts/: run_slurm_cluster.py
tests/: conftest.py  test_add_and_delete_paths.py  test_bioio_import.py  test_create_project.py  test_file_system.py  test_images_df.py  test_paths_df.py  test_paths_utils.py  test_project_io.py  test_project_settings.py  test_zarr_image_support.py
tools/: bump_toml_version.py  cp_readme_to_pp_package.py  dev_serve.sh  generate_licenses.py  pixel-patrol-slurm  publish_pypi.sh
viewer/: README.md  bench_wasm.mjs  index.html  package-lock.json  package.json  vite.config.js
(+151 files in other folders)
