[project]
name = "pixel-patrol"
version = "0.2.0"
description = "Image prevalidation tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bioio>=3.0.0",
    "bioio-ome-zarr>=2.1.1",
    "bioio-tifffile>=1.3.0",
    "bioio-imageio==1.3.0",
    "click>=8.2.1",
    "dash-ag-grid>=32.3.0",
    "dash-bootstrap-components>=2.0.3",
    "matplotlib>=3.10.3",
    "opencv-python>=4.11.0.88",
    "polars>=1.31.0",
    "pyarrow>=21.0.0",
    "pyyaml>=6.0.2",
    "statsmodels>=0.14.4",
    "tensorboard>=2.18.0",
    "tensorboardx>=2.6.4",
    "zarr>=3.1.0",
    "bokeh>=3.7.3",
    "seaborn>=0.13.2",
    "traccuracy>=0.3.0",
    "geff>=0.4.1",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pixel_patrol*"]

[project.scripts]
pixel-patrol = "pixel_patrol.cli:cli"

[project.entry-points."pixel_patrol.processing_plugins"]
pixel_patrol_processing_builtins = "pixel_patrol.plugins:register_processing_plugins"

[project.entry-points."pixel_patrol.report_plugins"]
pixel_patrol_report_builtins = "pixel_patrol.plugins:register_report_plugins"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.1",
]
