[project]
name = "pixel-patrol"
version = "0.2.0"
description = "Image prevalidation tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bioio-imageio>=1.1.0",
    "bioio>=1.6.1",
    "bioio-ome-zarr>=1.2.0",
    "bioio-tifffile>=1.2.0",
    "bioio-imageio==1.1.0",
    "click>=8.2.1",
    "dash-ag-grid>=31.3.1",
    "dash-bootstrap-components>=2.0.3",
    "matplotlib>=3.10.3",
    "opencv-python>=4.11.0.86",
    "polars>=1.29.0",
    "pyarrow>=20.0.0",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.1",
    "pyyaml>=6.0.2",
    "statsmodels>=0.14.4",
    "tensorboard>=2.18.0",
    "tensorboardx>=2.6.4",
    "zarr>=2.0.0,<3.0.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pixel_patrol*"]

[project.scripts]
pixel-patrol = "pixel_patrol.cli:cli"

[project.entry-points."pixel_patrol.loader_plugins"]
pixel_patrol_loader_builtins = "pixel_patrol.plugins:register_loader_plugins"

[project.entry-points."pixel_patrol.processor_plugins"]
pixel_patrol_processing_builtins = "pixel_patrol.plugins:register_processor_plugins"

[project.entry-points."pixel_patrol.widget_plugins"]
pixel_patrol_widget_builtins = "pixel_patrol.plugins:register_widget_plugins"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
