[project]
name = "pixel-patrol-base"
version = "0.2.0"
description = "Image prevalidation tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bioio>=3.0.0",
    "bioio-ome-zarr>=2.1.1",
    "bioio-tifffile>=1.3.0",
    "bioio-imageio==1.3.0",
    "click>=8.2.1",
    "dash-ag-grid>=32.3.0",
    "dash-bootstrap-components>=2.0.3",
    "matplotlib>=3.10.3",
    "opencv-python>=4.11.0.88",
    "polars>=1.31.0",
    "pyarrow>=21.0.0",
    "pyyaml>=6.0.2",
    "statsmodels>=0.14.4",
    "tensorboard>=2.18.0",
    "tensorboardx>=2.6.4",
    "zarr>=3.1.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pixel_patrol_base*"]

[project.scripts]
pixel-patrol-base = "pixel_patrol_base.cli:cli"

[project.entry-points."pixel_patrol.loader_plugins"]
pixel_patrol_loader_builtins = "pixel_patrol_base.plugins:register_loader_plugins"

[project.entry-points."pixel_patrol.processor_plugins"]
pixel_patrol_processing_builtins = "pixel_patrol_base.plugins:register_processor_plugins"

[project.entry-points."pixel_patrol.widget_plugins"]
pixel_patrol_widget_builtins = "pixel_patrol_base.plugins:register_widget_plugins"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.1",
]
