[project]
name = "geo_extension"
version = "0.1.0"
description = "Extension of pixel patrol for geodata."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    #"pixel_patrol_base>=0.1.0",
    "pixel_patrol>=0.1.0",
    "dask",
    "numpy",
    "rasterio",
    "polars",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/geo-extension"]

[project.entry-points."pixel_patrol.loader_plugins"]
geo_extension_loaders = "geo_extension.plugin_registry:register_loader_plugins"

[project.entry-points."pixel_patrol.processor_plugins"]
geo_extension_processors = "geo_extension.plugin_registry:register_processor_plugins"

[project.entry-points."pixel_patrol.widget_plugins"]
geo_extension_widgets = "geo_extension.plugin_registry:register_widget_plugins"

[tool.uv.sources]
pixel-patrol-base = { path = "../../packages/pixel-patrol-base" }
