[project]
name = "pixel-sky-watch"
version = "0.1.0"
description = "Minimal extension example for Pixel Patrol."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pixel_patrol_base>=0.1.0",
    "pyarrow",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/pixel_sky_watch"]

[project.entry-points."pixel_patrol.loader_plugins"]
my_extension_loaders = "pixel_sky_watch.plugin_registry:register_loader_plugins"

[project.entry-points."pixel_patrol.processor_plugins"]
my_extension_processors = "pixel_sky_watch.plugin_registry:register_processor_plugins"

[project.entry-points."pixel_patrol.viewer_extensions"]
my_extension_viewer = "pixel_sky_watch.plugin_registry:get_viewer_extension_dir"

[tool.uv.sources]
pixel-patrol-base = { path = "../../packages/pixel-patrol-base", editable = true }
